--- a/home.html
+++ b/home.html
@@ -174,7 +174,7 @@
             <li class="r_delete_row">Удалить строку</li>
         </ul>
         <ul class="left_context_menu context_menu"></ul>
-        <div class="popup"><span class="popup_text"></span><span class="close_cross">&times;</span></div>
+        <div class="popup"><span class="popup_text"></span><span class="close_cross span_button">&times;</span></div>
     </div>
     
     <script src="css-element-queries-1.2.1/src/ResizeSensor.js"></script>
