--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
             <div class="table_wrapper">
                 <div class="table">
                     <div class="table_header_wrapper">
-                        <table class="table_header">
+                        <table class="table_header main_table">
                             <tr>
                                 <th class="int">Год</th>
                                 <th class="field">Поле</th>
@@ -65,7 +65,7 @@
                     </div>
                     <div class="table_body_wrapper">
                         <div class="cell_selection"></div>
-                        <table class="table_body" tabindex="0">
+                        <table class="table_body main_table" tabindex="0">
                             <tr>
                                 <td contenteditable></td>
                                 <td></td>
@@ -100,7 +100,7 @@
             <div class="table_wrapper">
                 <div class="table">
                     <div class="table_header_wrapper">
-                        <table class="table_header">
+                        <table class="table_header main_table">
                             <tr>
                                 <th class="any">Поле</th>
                                 <th class="any">Владелец</th>
@@ -116,7 +116,7 @@
                     <div class="table_body_wrapper">
                         <div class="cell_selection"></div>
                         <!--<iframe name="frame" width=100% height=100% style="position:absolute;z-index:-1"></iframe>-->
-                        <table class="table_body fields" tabindex="0">
+                        <table class="table_body fields main_table" tabindex="0">
                             <tr>
                                 <td contenteditable></td>
                                 <td contenteditable></td>
@@ -132,7 +132,7 @@
             <div class="table_wrapper">
                 <div class="table">
                     <div class="table_header_wrapper">
-                        <table class="table_header">
+                        <table class="table_header main_table">
                             <tr>
                                 <th class="any">Культура</th>
                             </tr>
@@ -147,7 +147,7 @@
                     <div class="table_body_wrapper">
                         <div class="cell_selection"></div>
                         <!--<iframe name="frame" width=100% height=100% style="position:absolute;z-index:-1"></iframe>-->
-                        <table class="table_body cultures" tabindex="0">
+                        <table class="table_body cultures main_table" tabindex="0">
                             <tr>
                                 <td contenteditable></td>
                             </tr>
