--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
                     <span class="email_e auth_error">email_e</span>
                     <input type="password" name="password" class="password" placeholder="Ваш пароль" size="35">
                     <span class="password_e auth_error">password_e</span>
-                    <input type="checkbox" id="remember_me_checkbox" class="remember_me_checkbox"
+                    <input type="checkbox" id="remember_me_checkbox" class="remember_me_checkbox standart_checkbox"
                         name="remember_me_checkbox">
                     <label for="remember_me_checkbox">Запомнить меня</label>
                     <input type="submit" name="log_button" class="log_button" value="Войти">
