--- a/calculate.html
+++ b/calculate.html
@@ -273,7 +273,7 @@
                                         <span class="trend_function results">3</span>
                                     </div>
                                 </div>
-                                <div class="optimisation_2d stuff_2d_part">
+                                <!--<div class="optimisation_2d stuff_2d_part">
                                     <div class="header">
                                         <span class="header">Оптимизация</span>
                                     </div>
@@ -305,7 +305,7 @@
                                         <span class="x_opt results"></span>
                                         <span class="y_opt results"></span>
                                     </div>
-                                </div>
+                                </div>-->
                                 <div class="imitation_2d stuff_2d_part">
                                     <div class="header">
                                         <span class="header">Имитационное моделирование</span>
