навел порядок а то хуйня была

--- a/calculate.html
+++ b/calculate.html
@@ -436,15 +436,12 @@
     </div>
     <script src="css-element-queries-1.2.1/src/ResizeSensor.js"></script>
     <script src="js/plotly-latest.js" defer></script>
-    <script src="js/ajax.js" defer></script>
-    <script src="js/animation.js" defer></script>
-    <script src="js/v2_checkers.js" defer></script>
-    <script src="js/v2_common.js" defer></script>
-    <script src="js/v2_table_engine.js" defer></script>
-    <script src="js/v2_input_engine.js" defer></script>
+    <script src="js/common.js" defer></script>
+    <script src="js/table_engine.js" defer></script>
+    <script src="js/input_engine.js" defer></script>
     <script src="js/trends.js" defer></script>
-    <script src="js/v2_chart_engine.js" defer></script>
-    <script src="js/v2_calculate.js" defer></script>
+    <script src="js/chart_engine.js" defer></script>
+    <script src="js/calculate.js" defer></script>
 
     <!--
     <div class="common">
