--- a/login.html
+++ b/login.html
@@ -33,7 +33,6 @@
                         spellcheck="false">
                     <span class="email_e auth_error">email_e</span>
                     <input type="password" name="password" class="password" placeholder="Ваш пароль" size="35">
-                    <span class="password_e auth_error">password_e</span>
                     <input type="checkbox" id="remember_me_checkbox" class="remember_me_checkbox standart_checkbox"
                         name="remember_me_checkbox">
                     <label for="remember_me_checkbox">Запомнить меня</label>
@@ -48,10 +47,7 @@
             <span class="app_info"></span>
         </footer>
     </div>
-
-    <script src="js/ajax.js" defer></script>
-    <script src="js/animation.js" defer></script>
-    <script src="js/form_checkers.js" defer></script>
+    <script src="js/common.js" defer></script>
     <script src="js/login.js" defer></script>
 </body>
 
