--- a/home.html
+++ b/home.html
@@ -178,15 +178,11 @@
     </div>
     
     <script src="css-element-queries-1.2.1/src/ResizeSensor.js"></script>
-    <script src="js/clipboard.min.js"></script>
-    <script src="js/ajax.js" defer></script>
-    <script src="js/animation.js" defer></script>
-    <script src="js/v2_checkers.js" defer></script>
-    <script src="js/v2_common.js" defer></script>
-    <script src="js/v2_table_engine.js" defer></script>
-    <script src="js/v2_context_engine.js" defer></script>
-    <script src="js/v2_input_engine.js" defer></script>
-    <script src="js/v2_home.js" defer></script>
+    <script src="js/common.js" defer></script>
+    <script src="js/table_engine.js" defer></script>
+    <script src="js/context_engine.js" defer></script>
+    <script src="js/input_engine.js" defer></script>
+    <script src="js/home.js" defer></script>
 </body>
 
 <!--<script src="js/ajax.js" defer></script>
