--- a/registration.html
+++ b/registration.html
@@ -23,15 +23,15 @@
             <div></div>
             <div class="registration_content auth_content">
                 <span class="reg_span auth_span">Регистрация</span>
-                <form name="registration_form" class="registration_form auth_form" action="php/reg.php" method="POST" novalidate>
+                <form name="registration_form" class="registration_form auth_form" action="php/registration.php" method="POST" novalidate>
                     <span class="bd_e send_email_e auth_error">bd_e send_email_e</span>
                     <input type="email" name="email" class="email" placeholder="Ваш e-mail" size="35" spellcheck="false">
                     <span class="email_e auth_error">email_e</span>
-                    <input type="text" name="name" class="name" placeholder="Имя Фамилия" size="35" spellcheck="false">
+                    <input type="text" name="name" class="name" placeholder="Имя Фамилия" size="35" spellcheck="false" maxlength="50">
                     <span class="name_e auth_error">name_e</span>
-                    <input type="password" name="password1" class="password1" placeholder="Придумайте пароль" size="35">
+                    <input type="password" name="password1" class="password1" placeholder="Придумайте пароль" size="35" maxlength="12">
                     <span class="password1_e auth_error">password1_e</span>
-                    <input type="password" name="password2" class="password2" placeholder="Повторите пароль" size="35">
+                    <input type="password" name="password2" class="password2" placeholder="Повторите пароль" size="35" maxlength="12">
                     <span class="password2_e auth_error">password2_e</span>
                     <input type="submit" name="reg_button" class="reg_button" value="Зарегистрироваться">
                 </form>
@@ -43,11 +43,8 @@
             <span class="app_info"></span>
         </footer>
     </div>
-    <script src="js/styles.js" defer></script>
-    <script src="js/ajax.js" defer></script>
-    <script src="js/animation.js" defer></script>
-    <script src="js/form_checkers.js" defer></script>
-    <script src="js/reg.js" defer></script>
+    <script src="js/common.js" defer></script>
+    <script src="js/registration.js" defer></script>
 </body>
 
 </html>
