--- a/home.html
+++ b/home.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="ru">
+<!--test-->
 
 <head>
     <meta charset="UTF-8">
@@ -176,7 +177,7 @@
         <ul class="left_context_menu context_menu"></ul>
         <div class="popup"><span class="popup_text"></span><span class="close_cross span_button">&times;</span></div>
     </div>
-    
+
     <script src="css-element-queries-1.2.1/src/ResizeSensor.js"></script>
     <script src="js/common.js" defer></script>
     <script src="js/table_engine.js" defer></script>
