--- a/test.html
+++ b/test.html
@@ -10,17 +10,23 @@
 
 <body>
     <button class="button">click</button>
+    <div class="table"></div>
     <script>
         let button = document.querySelector(".button");
+        let table = document.querySelector(".table");
         button.onclick = function () {
-            let xhr = JSONRequest("p.cgi", JSON.stringify({'key':'1','key2':'2'}));
+            let y = [1.282, 0.958, 11.22, 0.431, 2.029, 1.699, 6.46, 0.401, 12.03, 5.233, 1.254, 3.051, 8.626, 3.693, 5.616, 0.906, 8.833, 2.236, 12.255, 1.273, 6.913, 4.737, 0.848, 13.418, 2.337, 7.242];
+            let order = [1, 2, 1];
+            let prlen = 10;
+            let xhr = JSONRequest("cgi/arima.cgi", JSON.stringify({ "y": y, "order": order, "prlen": prlen }));
+            console.log(JSON.stringify({ "y": y, "order": order, "prlen": prlen }));
             xhr.onload = function () {
                 if (xhr.status != 200) {
                     console.log(xhr.status);
                 } else {
                     console.log(xhr.status);
                     console.log(xhr.response);
-                    
+                    table.innerHTML = xhr.response["summary"];
                 }
             }
         }
